--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@angular/compiler": "~13.3.0",
         "@angular/core": "~13.3.0",
         "@angular/forms": "~13.3.0",
+        "@angular/material": "^13.3.2",
         "@angular/platform-browser": "~13.3.0",
         "@angular/platform-browser-dynamic": "~13.3.0",
         "@angular/router": "~13.3.0",
+        "@material/dialog": "^13.0.0",
         "bootstrap": "^4.0.0-beta.2",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
